#1847 Flight Session Automation - New Menu Item

--- a/src/main.html
+++ b/src/main.html
@@ -257,6 +257,8 @@
                                         i18n_title="tabHelp"></a></li>
                 <li class="tab_firmware_flasher" id="tabFirmware"><a href="#" i18n="tabFirmwareFlasher" class="tabicon ic_flasher"
                                                     i18n_title="tabFirmwareFlasher"></a></li>
+                <li class="tab_session_automation" id="tabSession"><a href="#" i18n="tabSessionAutomation" class="tabicon ic_automation"
+                                                                     i18n_title="tabSessionAutomation"></a></li>
             </ul>
             <ul class="mode-connected">
                 <li class="tab_setup"><a href="#" i18n="tabSetup" class="tabicon ic_setup" i18n_title="tabSetup"></a></li>
